# gtm-db

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ngrok-cli.yml  pyproject.toml
docs/: README.md  agent-query-layer-design.html  api-reference.html
scripts/: __init__.py  _sample_import.csv  ask.py  chat.html  chat.py  create_api_key_http.py  import_csv.py  import_funnel.py  materialize_campaign.py  ngrok-local.sh  seed_clickhouse.py  seed_mat_test.py
scripts/mappings/: __init__.py  monday_crm_campaigns.py
skills/gtmdb/: SKILL.md
src/crmdb/: __init__.py  __main__.py  client.py  config.py  connect.py  presets.py  scope.py  seed.py  tokens.py  types.py
src/crmdb/api/: __init__.py  _base.py  accounts.py  actors.py  campaigns.py  contacts.py  deals.py  leads.py  models.py  relationships.py  scores.py
src/crmdb/graph/: __init__.py  adapter.py
src/gtmdb/: __init__.py  __main__.py  api_keys.py  client.py  config.py  connect.py  guard.py  key_store.py  presets.py  resources.py  scope.py  seed.py  tokens.py  tracing.py  types.py
src/gtmdb/analyst/: __init__.py  permissions.py  planner.py  runner.py  schema_context.py  tools.py
src/gtmdb/api/: __init__.py  (+17 more)
tests/: test_a2a.py  test_actors_integration.py  test_api_keys.py  test_edge_reasoning.py  test_email_campaign_integration.py  test_entity_actor_integration.py  test_explore_errors.py  test_explore_labels.py  test_gtm_event.py  test_lead_campaign_integration.py  test_lead_signed_up_as_integration.py  test_olap_client.py  test_phase2.py  test_phase3_integration.py  test_tracing.py
(+58 files in other folders)
